Completed the project

--- a/public/Selective_Repeat/game.html
+++ b/public/Selective_Repeat/game.html
@@ -46,6 +46,8 @@
   </style>
 </head>
 <body>
+  <h1>Selective Repeat Simulation</h1>
+
   <div class="emscripten_border">
 
     <div class="legend">
