--- a/public/Stop_Wait/game.html
+++ b/public/Stop_Wait/game.html
@@ -46,6 +46,8 @@
   </style>
 </head>
 <body>
+  <h1>Stop&Wait Simulation</h1>
+
   <div class="emscripten_border">
 
     <div class="legend">
@@ -62,7 +64,7 @@
     <div class="simulation-info">
       <div class="top-text">
         <p><b>Sender</b></p>
-        <p>Send Window Size = 1</p>
+        <p>Send Window Size = 5</p>
         <p>Timeout = 10s</p>
       </div>
 
