--- a/Selective_Repeat/game.html
+++ b/Selective_Repeat/game.html
@@ -46,7 +46,7 @@
   </style>
 </head>
 <body>
-  <h1>Stop&Wait Simulation</h1>
+  <h1>Selective Repeat Simulation</h1>
 
   <div class="emscripten_border">
 
