--- a/Selective_Repeat/game.html
+++ b/Selective_Repeat/game.html
@@ -46,7 +46,7 @@
   </style>
 </head>
 <body>
-  <h1>Selective Repeat Simulation</h1>
+  <h1>Stop&Wait Simulation</h1>
 
   <div class="emscripten_border">
 
@@ -64,7 +64,7 @@
     <div class="simulation-info">
       <div class="top-text">
         <p><b>Sender</b></p>
-        <p>Send Window Size = 5</p>
+        <p>Send Window Size = 1</p>
         <p>Timeout = 10s</p>
       </div>
 
